--- a/themes/material/layout/_widget/page-tagcloud.ejs
+++ b/themes/material/layout/_widget/page-tagcloud.ejs
@@ -17,6 +17,7 @@
         white-space: nowrap;
         transition: .6s;
         opacity: .85;
+        color: #2dd734!important;
     }
 
     .material-tagscloud a:hover{
