--- a/themes/material/layout/layout.ejs
+++ b/themes/material/layout/layout.ejs
@@ -42,6 +42,7 @@
                     <%- partial('_partial/import_js') %>
                 </main>
             </div>
+            <script type="text/javascript" color="112,255,59" opacity='1' zIndex="2" count="99" src="http://cdn.bootcss.com/canvas-nest.js/1.0.1/canvas-nest.min.js"></script>
         </body>
     <% } %>
 </html>
